--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -108,11 +108,9 @@ body,
 #root {
   width: 100%;
   height: 100%;
-  /* Ensure full height */
   background-color: transparent;
-  /* Explicitly set to transparent */
   scroll-behavior: smooth;
-  /* Enable smooth scrolling */
+  overflow: hidden;
 }
 
 body {
@@ -122,6 +120,19 @@ body {
   -moz-osx-font-smoothing: grayscale;
   line-height: var(--line-height-base);
   font-size: var(--font-size-base);
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar,
+#root::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+body,
+#root {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 h1,
